syntax = "proto3";

message ConnectionRequest {
    int32 person_id = 1;
    string start_date = 2;
    string end_date = 3;
    int32 distance = 4;
}

message ConnectionResponse {
    repeated Connection connections = 1;
}

service ConnectionService {
    rpc GetConnections (ConnectionRequest) returns (ConnectionResponse);
}

message Connection {
    Person person = 1;
    Location location = 2;
}

message Person {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string company_name = 4;
}

message Location {
    int32 id = 1;
    int32 person_id = 2;
    string longitude = 3;
    string latitude = 4;
    string creation_time = 5;
}

